## Process this file with automake to produce Makefile.in

sweepincludedir = $(includedir)/sweep

sweepinclude_HEADERS = \
	sweep_version.h \
	sweep_i18n.h \
	sweep.h \
	sweep_types.h \
	sweep_typeconvert.h \
	sweep_sample.h \
	sweep_sounddata.h \
	sweep_filter.h \
	sweep_selection.h \
	sweep_undo.h
